--- a/gallerySample/index.html
+++ b/gallerySample/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>gallerySample</title>
+	<title>Dominic Aratari Gallery Sample</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="author" content="The Chopping Block, Inc." />
 	<meta name="geo.country" content="US" />
@@ -21,7 +21,7 @@
 <body>
 
 	<div class="wrap" >
-		Project: gallerySample
+
 	</div>
 	
 </body>
